# Mshell

./: Cargo.toml  LICENSE  README.md  architecture.txt  enginetest.msh  techstack.txt  test.msh
src/: main.rs
src/core/: env.rs  expr.rs  intent.rs  types.rs
src/core/transaction/: engine.rs
tests/: chaining.rs
