[package]
name = "mshell"
version = "1.0.0"
edition = "2021"
description = "A shell with a full scripting runtime, built on the original MORRIS philosophy"
authors = ["Stanislaw"]
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.0"
dirs = "5.0"
supports-color = "2.0"
rustyline = { version = "12.0", features = ["with-file-history"] }
ctrlc = "3.4"
petgraph = "0.6"
sha2 = "0.10"
ring = "0.17"

[[bin]]
name = "mshell"
path = "src/main.rs"